--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,6 @@ nav {
 #tieAut__Grid {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
-  grid-template-areas: 'honda' 'audi' 'chevrolet' 'renault' 'ford' 'fiat' 'nissan';
   grid-row-gap: 0px; }
   #tieAut__Grid div[id*="Img"] {
     height: 292px; }
@@ -200,7 +199,6 @@ nav {
 
 /*------HONDA------*/
 #honda {
-  grid-area: honda;
   grid-template-areas: 'titHonda titHonda titHonda' 'honda1 honda2 honda3'; }
   #honda #honda1 {
     grid-area: honda1;
@@ -243,7 +241,6 @@ nav {
 
 /*------AUDI------*/
 #audi {
-  grid-area: audi;
   grid-template-areas: 'titAudi titAudi titAudi' 'audi1 audi2 audi3'; }
   #audi #audi1 {
     grid-area: audi1;
@@ -286,7 +283,6 @@ nav {
 
 /*------CHEVROLET------*/
 #chevrolet {
-  grid-area: chevrolet;
   grid-template-areas: 'titChevr titChevr titChevr' 'chevr1 chevr2 chevr3'; }
   #chevrolet #chevr1 {
     grid-area: chevr1;
@@ -329,7 +325,6 @@ nav {
 
 /*------RENAULT------*/
 #renault {
-  grid-area: renault;
   grid-template-areas: 'titRena titRena titRena' 'rena1 rena2 rena3'; }
   #renault #rena1 {
     grid-area: rena1;
@@ -372,7 +367,6 @@ nav {
 
 /*------FORD------*/
 #ford {
-  grid-area: ford;
   grid-template-areas: 'titFord titFord titFord' 'ford1 ford2 ford3'; }
   #ford #ford1 {
     grid-area: ford1;
@@ -418,7 +412,6 @@ nav {
 
 /*------FIAT------*/
 #fiat {
-  grid-area: fiat;
   grid-template-areas: 'titFiat titFiat titFiat' 'fiat1 fiat2 fiat3'; }
   #fiat #fiat1 {
     grid-area: fiat1;
@@ -461,7 +454,6 @@ nav {
 
 /*------NISSAN------*/
 #nissan {
-  grid-area: nissan;
   grid-template-areas: 'titNiss titNiss titNiss' 'niss1 niss2 niss3'; }
   #nissan #niss1 {
     grid-area: niss1;
@@ -631,6 +623,44 @@ nav {
       grid-template-areas: 'titNiss' 'niss1' 'niss2' 'niss3'; }
       #tieAut__Main #tieAut__Grid #nissan h2 {
         grid-area: titNiss; } }
+
+.search-icon {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background-color: #007bff;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
+
+.search-screen {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: right 0.3s ease;
+  z-index: 1000; }
+
+.search-screen.open {
+  right: 0; }
+
+.search-container {
+  text-align: center; }
+
+#search-input {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px; }
 
 #mainConsulta {
   display: grid;
