hice pagina "nosotros"

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@ $paleta-colores: (
 @import "productos";
 @import "registro-inicioSesion";
 @import "ventaAutos";
+@import "nosotros";
 
 *{
     margin: 0;
