--- a/scss/_cliente.scss
+++ b/scss/_cliente.scss
@@ -190,6 +190,11 @@ $areasgridConsulta:(
         
     }
 
+    #img_laptop{
+        height: 300px;
+        
+    }
+
     #p1c, #p2c, #p3c {
         width: 100%;
     }
