--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,7 @@ nav {
 
 #tieAut__Grid {
   display: grid;
-  grid-template-rows: repeat(7, 1fr);
+  grid-template-rows: auto;
   grid-row-gap: 0px; }
   #tieAut__Grid div[id*="Img"] {
     height: 292px; }
@@ -1451,7 +1451,8 @@ nav {
     transform: translateY(0); } }
 
 body {
-  animation: fadeIn 1s ease-in-out; }
+  animation: fadeIn 1s ease-in-out;
+  overflow-x: hidden; }
 
 #in_header {
   animation: fadeIn 0.5s ease-in-out; }
