--- a/scss/_autos.scss
+++ b/scss/_autos.scss
@@ -73,7 +73,7 @@ $areasNiss:(
 #tieAut__Grid{
     display: grid;
 
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: auto;
 
     grid-row-gap: 0px;
     div[id*="Img"]{
