--- a/css/main.css
+++ b/css/main.css
@@ -598,45 +598,67 @@ nav {
       #tieAut__Main #tieAut__Grid #nissan h2 {
         grid-area: titNiss; } }
 
-/*Pantalla de busqueda*/
-.search-icon {
-  position: fixed;
-  top: 115px;
-  right: 20px;
-  background-color: #007bff;
-  color: white;
-  padding: 10px 15px;
-  border-radius: 50%;
-  cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
-
-.search-screen {
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
+/*BUSQUEDA-----------------------------------------------------------------*/
+.body- {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: right 0.3s ease;
-  z-index: 1000; }
+  transform: translate(8px, 0px); }
 
-.search-screen.open {
-  right: 0; }
-
-.search-container {
-  text-align: center; }
+.contenedorBusqueda {
+  position: relative;
+  padding: 10px;
+  display: flex;
+  align-items: center; }
 
 #search-input {
-  width: 80%;
-  padding: 10px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px; }
+  outline: none;
+  box-sizing: border-box;
+  height: 60px;
+  width: 0px;
+  padding: 0 20px;
+  color: #000;
+  border-radius: 50px;
+  font-size: 20px;
+  border: 1px solid #D50000;
+  background-color: #fff;
+  transition: all 0.7s ease; }
 
+.contenedorBusqueda ::placeholder {
+  color: gray;
+  font-size: 20px; }
+
+.botonBusqueda {
+  position: absolute;
+  right: 0px;
+  width: 80px;
+  height: 80px;
+  background: #D50000;
+  border-radius: 50%;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s ease; }
+
+.botonBusqueda span {
+  font-size: 25px;
+  color: white;
+  transition: all 0.7s ease; }
+
+.contenedorBusqueda:hover #search-input {
+  width: 350px; }
+
+.contenedorBusqueda:hover span {
+  transform: rotate(360deg); }
+
+.botonBusqueda:hover {
+  background: #cc0000; }
+
+/*------------------------------------------------------------------------------------*/
 #mainConsulta {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
