--- a/css/main.css
+++ b/css/main.css
@@ -602,6 +602,8 @@ nav {
 .body- {
   margin: 0;
   padding: 0;
+  position: sticky;
+  top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
